Fixes for Create button (#5057)
* Set tooltip for Create button
* Create button: Fix separator and ellipsize when overflowing

--- a/webviews/createPullRequestViewNew/index.css
+++ b/webviews/createPullRequestViewNew/index.css
@@ -4,13 +4,17 @@
  *--------------------------------------------------------------------------------------------*/
 
 
+:disabled {
+	opacity: 0.4;
+}
+
 body {
 	padding: 0 20px;
 }
 
 .group-main {
 	height: 100vh;
-	min-width: 205px;
+	min-width: 160px;
 	display: flex;
 	flex-direction: column;
 	align-items: stretch;
@@ -21,11 +25,12 @@ body {
 	height: 16px;
 }
 
+/*
 svg,
 svg path {
 	fill: var(--vscode-foreground);
 }
-
+*/
 
 /* Base + Merge Branches */
 
@@ -214,6 +219,7 @@ textarea {
 }
 
 
+/* TODO: Check style on Windows */
 option {
 	color: var(--vscode-dropdown-foreground);
 }
@@ -221,11 +227,22 @@ option {
 .create-button {
 	display: flex;
 	flex-grow: 1;
+	min-width: 0;
+
 }
 
 .split-left {
 	flex-grow: 1;
-	border-radius:  2px 0 0 2px;
+	border-radius: 2px 0 0 2px;
+	overflow: hidden !important;
+	white-space: nowrap !important;
+	text-overflow: ellipsis !important;
+}
+
+.split {
+	width: 1px; height: 100%;
+	background-color: var(--vscode-button-background);
+	opacity: 0.5;
 }
 
 .split-right {
@@ -242,6 +259,10 @@ option {
 	fill: var(--vscode-button-foreground);
 }
 
+.split-right:has(select:disabled) .icon svg path {
+	opacity: 0.4;
+}
+
 .split-right select {
 	color: transparent;
 	appearance: none;
@@ -254,19 +275,13 @@ option {
 	border: 1px solid var(--vscode-contrastBorder);
 }
 
+select:disabled {
+	cursor: default;
+}
+
 .split-right select:focus,
-.split-right select:hover {
+.split-right select:hover:not(:disabled) {
 	outline: none;
 	background-color: var(--vscode-button-hoverBackground);
 	border: 1px solid var(--vscode-contrastActiveBorder);
-}
-
-.split-right select:disabled,
-:disabled {
-	cursor: wait;
-}
-
-:disabled {
-	color: var(--vscode-disabledForeground);
-	opacity: 0.4;
 }
